Fixed image color, sizing, fonts & spacing

--- a/Final Project/stylesheet/portfolio.css
+++ b/Final Project/stylesheet/portfolio.css
@@ -8,6 +8,10 @@ body {
     margin: 0%  /* This ensures our site displays all the way to the edge of the browser screen */
 }
 
+body.fade-out {
+    opacity: 1;
+}
+
 /* Heading 1 elements */
 h1 {
     text-transform: uppercase; /* Capitalizing all h1 headings */
